--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "ng serve",
-    "build": "ng build"
+    "build": "ng build",
+    "test": "jest"
   },
   "private": true,
   "dependencies": {
@@ -22,6 +23,11 @@
     "@angular/build": "^20.1.4",
     "@angular/cli": "^20.1.4",
     "@angular/compiler-cli": "^20.1.0",
+    "@ngneat/spectator": "^21.0.1",
+    "@types/jest": "^30.0.0",
+    "jest": "^30.0.5",
+    "jest-preset-angular": "^15.0.0",
+    "ts-jest": "^29.4.1",
     "typescript": "~5.8.2"
   }
 }
