--- a/angular.json
+++ b/angular.json
@@ -86,6 +86,12 @@
           },
           "defaultConfiguration": "development"
         },
+        "test": {
+          "builder": "@angular-devkit/build-angular:jest",
+          "options": {
+            "tsConfig": "tsconfig.spec.json"
+          }
+        },
         "extract-i18n": {
           "builder": "@angular/build:extract-i18n"
         }
